--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/dotenv": "^1.4.0",
     "js-cookie": "^2.2.1",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "nuxt-start": "^2.13.3",
+    "pm2": "^4.4.0"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
